# ut_arm_ros2

./: readme.md
arm_controller/: CMakeLists.txt  package.xml  readme.md
arm_controller/launch/: arm_controller_test.launch.py  utarm_api_server.launch.py
arm_controller/src/: arm_controller_test.cpp  utarm_api_server.cpp  utarm_report_publisher.cpp
arm_description/: CMakeLists.txt  package.xml
arm_description/launch/: view_opti6.launch.py  view_opti7.launch.py  view_utra6.launch.py
arm_description/rviz/: view_robot.rviz
arm_description/urdf/: arm_transmissions.xacro  opti6.ros2_control.xacro  opti6.urdf.xacro  opti6_macro.xacro  opti7.ros2_control.xacro  opti7.urdf.xacro  opti7_macro.xacro  utra6.ros2_control.xacro  utra6.urdf.xacro  utra6_macro.xacro
ut_api/: CMakeLists.txt  package.xml
ut_api/include/ut_api/base/: arm_api_base.h
ut_api/include/ut_api/common/: periodic_rt.h  print.h
ut_api/src/base/: arm_api_base.cpp  servo_api_base.cpp
ut_api/src/common/: socket_tcp.cpp
ut_msg/: CMakeLists.txt  package.xml
ut_msg/srv/: CheckConnect.srv  Connect.srv  Disconnect.srv  GetFloat32.srv  GetFloat32s.srv  GetGripperState.srv  GetInt16.srv  GetUint16s.srv  MovetoCartesianLine.srv  MovetoCartesianLineb.srv  MovetoJointP2p.srv  SetEnable.srv  SetFloat32.srv  SetGripperState.srv  SetInt16.srv
